--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body.dark {
     background-color: var(--bg-dark);
     --black--100: var(--bg-dark);
     --black-000: var(--bg-dark);
-    --main-to-dark-color: var(--bg-dark);
+    --main-to-dark-color: var(--black-alpha-100);
     --dark-to-main-color: var(--main-color);
     --shadow-black-100: var(--shadow-black-300);
     --black-alpha-100: rgba(255, 255, 255, 0.05);
@@ -51,20 +51,19 @@ img {
     vertical-align: middle;
 }
 
+p {
+    font-weight: 300;
+    line-height: 26px;
+}
+
 ul {
     list-style: none;
 }
 
+
 .btn-1 {
     background-color: #ffffff;
-    padding: 12px 30px;
-    border-radius: 30px;
     color: var(--main-color);
-    font-size: 16px;
-    text-transform: capitalize;
-    transition: all 0.5s ease;
-    box-shadow: var(--shadow-black-300);
-    font-weight: 500;
 }
 
 .btn-1:focus {
@@ -78,9 +77,12 @@ ul {
 
 .btn-2 {
     background-color: var(--main-color);
+    color: #ffffff;
+}
+
+.btn-1, .btn-2 {
     padding: 12px 30px;
     border-radius: 30px;
-    color: #ffffff;
     font-size: 16px;
     text-transform: capitalize;
     transition: all 0.5s ease;
@@ -160,34 +162,17 @@ ul {
 }
 
 /*NavBar*/
-.navbar {
-    background-color: transparent;
-    padding: 20px 0;
-}
-
 .navbar.navbar-shrink {
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     background-color: var(--main-color);
 }
 
-.navbar > .container {
-    padding: 0 15px;
-} 
-
 .navbar .navbar-brand {
     font-size: 30px;
-    font-weight: 500;
     color: #ffffff;
-    text-transform: capitalize;
-}
-
-.navbar .nav-item {
-    margin-left: 40px;
 }
 
 .navbar .nav-item .nav-link {
     color: #ffffff;
-    text-transform: capitalize;
     font-size: 16px;
     font-weight: 400;
     padding: 5px 0;
@@ -197,18 +182,18 @@ ul {
 .navbar .nav-item .nav-link::after {
     content: ' ';
     position: absolute;
-    right: 0;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    width: 0;
     height: 1px;
     background-color: #ffffff;
-    transition: all 0.5s ease;
-    transform: scale(0);
+    transition: width 0.5s ease;
+    transform-origin: 0;
 }
 
 .navbar .nav-item .nav-link:hover::after,
 .navbar .nav-item .nav-link.active::after{
-    transform: scale(1);
+    width: 100%;
 }
 
 /*Home Section*/
@@ -224,14 +209,12 @@ ul {
     font-size: 45px;
     font-weight: 700;
     color: #ffffff;
-    margin-bottom: 20px;
 }
 
 .home-text p {
     font-size: 18px;
     color: #ffffff;
     line-height: 28px;
-    font-weight: 300;
 }
 
 .home .home-btn {
@@ -276,7 +259,6 @@ ul {
     height: 400px;
     transform: translate(-50%, -50%);
     border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
 }
 
 .home-img .circle::after {
@@ -286,25 +268,19 @@ ul {
     height: 60px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.4);
-    top: 30px;
-    left: 30px;
-    transform-origin:170px 170px ;
+    top: -30px;
+    left: calc(50% - 30px);
+    transform-origin: 30px 230px;
     animation: spin_01 10s linear infinite;
 }
 
 /*Video Popup*/
 .video-popup {
     padding-top: 30px;
-    position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
     z-index: 1999;
     background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
     opacity: 0;
     visibility: hidden;
     transition: all 0.5s ease;
@@ -316,19 +292,15 @@ ul {
 }
 
 .video-popup-inner {
-    width: 100%;
     max-width: 900px;
-    position: relative;
 }
 
 .video-popup .video-popup-close {
-    position: absolute;
     right: 0;
     width: 30px;
     height: 30px;
     top: -30px;
     font-size: 16px;
-    text-align: center;
     line-height: 30px;
     cursor: pointer;
     color: #ffffff;
@@ -339,11 +311,7 @@ ul {
 }
 
 .video-popup #player-1 {
-    position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;    
 }
 
 /*Features Section*/
@@ -355,8 +323,6 @@ ul {
     font-size: 40px;
     color: var(--black-900);
     font-weight: 700;
-    text-transform: capitalize;
-    margin: 0;    
     margin-bottom: 30px;
 }
 
@@ -365,14 +331,8 @@ ul {
 }
 
 .features .feature-item {
-    box-shadow: var(--shadow-black-100);
-    margin: 15px;
     padding: 30px;
-    border-radius: 10px;
-    text-align: center;
-    position: relative;
     z-index: 1;
-    overflow: hidden;
 }
 
 .features .feature-item::before,
@@ -417,10 +377,8 @@ ul {
     height: 60px;
     width: 60px;
     margin: 0 auto 30px;
-    text-align: center;
     font-size: 30px;
     color: var(--main-color);
-    position: relative;
     transition: all 0.5s ease;
     z-index: 1;
 }
@@ -460,15 +418,10 @@ ul {
     margin: 0 0 20px;
     color: var(--black-900);
     font-weight: 500;
-    text-transform: capitalize;
 }
 
 .features .feature-item p {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 300;
     color: var(--black-400);   
-    margin: 0 0 15px; 
 }
 
 .owl-carousel .owl-dots {
@@ -488,35 +441,24 @@ ul {
     background-color: var(--main-color);
 }
 
+/* Funfacts Facts Section */
 .fun-facts {
-    background-color: var(--black--100);
-}
-
-.fun-facts .section-title {
-    margin-bottom: 20px;
-    text-align: left;
+    background-color: var(--black-alpha-100);
 }
 
 .fun-facts-img img {
     max-width: 250px;
-    box-shadow: var(--shadow-black-100);
     border-radius: 32px;
     animation: bounceTop_01 3s ease infinite;
 }
 
 .fun-facts-text p {
-    font-size: 16px;
-    line-height: 26px;
     color: var(--black-400);
-    margin: 0 0 15px;
-    font-weight: 300;
 }
 
 .fun-facts-item {
     padding: 30px;
-    box-shadow: var(--shadow-black-100);
     border-radius: 10px;
-    text-align: center;
     margin-top: 30px;
 }
 
@@ -524,41 +466,12 @@ ul {
     font-size: 40px;
     color: #ffffff;
     font-weight: 700;
-    margin: 0 0 5px;
 }
 
-.fun-facts-item span {
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: 300;
-    margin: 0;
-    line-height: 26px;
-    display: block;
-    color: #ffffff;
-}
-
-.fun-facts-item.style-1 {
-    background-color: var(--color-1);
-}
-
-.fun-facts-item.style-2 {
-    background-color: var(--color-2);
-}
-
-.fun-facts-item.style-3 {
-    background-color: var(--color-3);
-}
-
-.fun-facts-item.style-4 {
-    background-color: var(--main-color);
-}
 
 /*App Screenshots Section*/
 .screenshots-item img {
-    width: 100%;
     max-width: 250px;
-    display: block;
-    margin: auto;
 }
 
 /*App Download Section*/
@@ -567,12 +480,7 @@ ul {
     background-position: center top;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    position: relative;
     z-index: 1;
-}
-
-.app-download .section-title h2 {
-    color: #ffffff;
 }
 
 .app-download::before {
@@ -589,27 +497,21 @@ ul {
 .app-download-item {
     background-color: var(--black-000);
     padding: 30px;
-    text-align: center;
     border-radius: 10px;
 }
 
 .app-download-item i {
     font-size: 30px;
     color: var(--main-color);
-    display: inline-block;
 }
 
 .app-download-item h3 {
     font-size: 22px;
     color: var(--black-900);
     font-weight: 500;
-    margin: 20px 0;
-    text-transform: capitalize;
 }
 
 .app-download-item p {
-    font-size: 16px;
-    line-height: 26px;
     color: var(--black-400);
     margin-bottom: 30px;
 }
@@ -617,8 +519,6 @@ ul {
 /*How It Works Section*/
 .how-it-works-item {
     padding: 30px;
-    text-align: center;
-    position: relative;
     z-index: 1;
 }
 
@@ -636,109 +536,66 @@ ul {
 .how-it-works-item .step {
     height: 60px;
     width: 60px;
-    margin: 0 auto;
     line-height: 60px;
-    text-align: center;
     background-color: var(--main-color);
     font-size: 30px;
     font-weight: 500;
-    margin-bottom: 15px;
-    color: #ffffff;
-    border-radius: 50%;
 }
 
 .how-it-works-item h3 {
-    margin: 20px 0;
     font-size: 22px;
     font-weight: 500;
     color: var(--black-900);
-    text-transform: capitalize;
 }
 
 .how-it-works-item p {
-    font-size: 16px;
-    font-weight: 300;
     color: var(--black-400);
-    line-height: 26px;
+    
 }
 
 /*Testimonials Section */
 .testimonials {
-    background-color: var(--black--100);
+    background-color: var(--black-alpha-100);
 } 
 
 .testimonial-item {
-    margin: 15px;
     padding: 30px;
-    box-shadow: var(--shadow-black-100);
     border-radius: 10px;
-    text-align: center;
 }
 
 .testimonial-item .img-box {
     height: 100px;
     width: 100px;
-    display: inline-block;
     margin-bottom: 30px;
     border: 4px solid var(--main-color);
-    border-radius: 50%;
-    position: relative;
 }
 
-.testimonial-item .img-box img {
-    border-radius: 50%;
-}
 
 .testimonial-item .img-box i {
-    position: absolute;
     height: 30px;
     width: 30px;
     background-color: var(--main-color);
-    border-radius: 50%;
     line-height: 30px;
     font-size: 12px;
-    text-align: center;
-    color: #ffffff;
     left: calc(100% - 15px);
     top: calc(50% - 15px);
 }
 
 .testimonial-item p {
-    font-size: 16px;
-    margin-bottom: 20px;
     color: var(--black-400);
-    line-height: 26px;
-    font-weight: 300;
 }
 
 .testimonial-item h3 {
     font-size: 22px;
     color: var(--black-900);
-    font-weight: 500;
-    margin-bottom: 5px;
-    text-transform: capitalize;
 }
 
 .testimonial-item span {
-    display: block;
-    font-size: 16px;
     color: var(--black-400);
-    font-weight: 300;
-}
-
-.testimonial-item .rating {
-    margin-top: 10px;
-}
-
-.testimonial-item .rating i {
-    display: inline-block;
-    font-size: 16px;
-    color: var(--color-2);
 }
 
 /*Pricing Section*/
 .pricing-plan {
-    box-shadow: var(--shadow-black-100);
     border-radius: 10px;
 }
 
@@ -748,42 +605,27 @@ ul {
 }
 
 .pricing-plan .pricing-header h3 {
-    text-align: center;
     font-size: 30px;
     color: var(--black-900);
     font-weight: 500;
-    text-transform: capitalize;
-    margin: 0;
 }
 
 .pricing-plan .pricing-price {
     padding: 40px 30px;
-    display: flex;
-    justify-content: center;
     line-height: 0.7;
 }
 
 .pricing-plan .pricing-price .currency {
-    font-size: 16px;
-    font-weight: 300;
     color: var(--black-400);
-    margin-right: 5px;
-    align-self: flex-start;
 }
 
 .pricing-plan .pricing-price .price {
     font-size: 80px;
-    font-weight: 700;
     color: var(--main-color);
 }
 
 .pricing-plan .pricing-price .period {
-    font-size: 16px;
-    font-weight: 300;
     color: var(--black-400);
-    margin-right: 5px;
-    align-self: flex-end;
-    text-transform: uppercase;
 }
 
 .pricing-plan .pricing-body {
@@ -791,12 +633,10 @@ ul {
 }
 
 .pricing-plan .pricing-body ul li {
-    font-size: 16px;
-    font-weight: 300;
     color: var(--black-400);
     padding: 10px 0 10px 30px;
     border-bottom: 1px solid var(--black-alpha-100);
-    line-height: 26px;
+    
     position: relative;
 }
 
@@ -822,8 +662,6 @@ ul {
 }
 
 .team-item  {
-    box-shadow: var(--shadow-black-100);
-    margin: 15px;
     padding: 30px;
     border-radius: 10px;
 }
@@ -831,17 +669,11 @@ ul {
 .team-item h3 {
     font-size: 18px;
     color: var(--black-900);
-    font-weight: 500;
     margin: 15px 0 8px;
-    text-transform: uppercase;
 }
 
 .team-item span {
-    display: block;
-    font-size: 16px;
-    font-weight: 300;
     color: var(--black-400);
-    text-transform: capitalize;
 }
 
 /*Faq Section*/
@@ -853,7 +685,6 @@ ul {
     box-shadow: var(--shadow-black-100);
     padding: 20px 50px 20px 30px;
     cursor: pointer;
-    position: relative;
 }
 
 .faq .accordion-header::before {
@@ -899,7 +730,7 @@ ul {
     background-color: var(--black--100);
     font-weight: 300;
     font-size: 16px;
-    line-height: 26px;
+    
     margin: 0;
     color: var(--black-400);
 }
@@ -948,7 +779,7 @@ ul {
     font-size: 16px;
     color: var(--black-400);
     font-weight: 300;
-    line-height: 26px;
+    
     margin: 0;
 }
 
@@ -992,7 +823,7 @@ ul {
 
 .footer-col p {
     font-size: 16px;
-    line-height: 26px;
+    
     font-weight: 300;
     color: rgba(255, 255, 255, 0.9);
     margin: 0;
@@ -1022,7 +853,7 @@ ul {
 .footer .copyright-text {
     font-size: 16px;
     color: rgba(255, 255, 255, 0.9);
-    line-height: 26px;
+    
     font-weight: 300;
     text-align: center;
     margin: 50px 0 0;
@@ -1044,9 +875,6 @@ ul {
     font-size: 16px;
     text-align: center;
     border-radius: 50%;
-}
-
-.toggle-theme i {
     line-height: 40px;
 }
 
@@ -1083,9 +911,7 @@ ul {
     }
 
     .home-img .circle::after {
-        transform-origin: 142px 142px;
-        left: 18px;
-        top: 18px;
+        transform-origin: 30px 190px;
     }
 
     .home-text h1 {
